# connpass-client

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  tox-demo.yml
connpass_client/: __init__.py  __main__.py  client.py  io.py
tests/: test_sample.py
