[tool.poetry]
name = "connpass-client"
version = "0.2.0"
description = ""
authors = ["driller"]
readme = "README.md"
packages = [{include = "connpass_client"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
