[tool.poetry]
name = "connpass-client"
version = "0.3.1"
description = ""
authors = ["driller"]
readme = "README.md"
packages = [{include = "connpass_client"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.1"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"
genbadge = {extras = ["coverage"], version = "^1.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
